# tris-stalker

./: .gitignore  CMakeLists.txt
src/app/: main.cpp
